bug on overflow

--- a/Pages/style.css
+++ b/Pages/style.css
@@ -7,8 +7,8 @@
 
 #topBar{
 	position: absolute;
-    /*background-image:url("images\\tile3.png");*/
-	/*background-repeat:repeat;*/
+    background-image:url("images\\tile3.png");
+	background-repeat:repeat;
 }
 
 #logo{
@@ -33,7 +33,6 @@
 
 .lineSeparator{
 	position: absolute;
-	height: 0.2%;
 }
 
 #rescalerL,#rescalerR{
@@ -69,4 +68,50 @@
 	height: 95%;
     background-image:url("images\\tile2.png");
 	background-repeat:repeat;
+	overflow: scroll;
 }
+
+.wrapper{
+	width: 500px;
+	height: 200px;
+	background-color: #f00;
+}
+
+#outer {
+	height: 100%; 
+	width: 100%;
+	overflow: hidden; 
+	position: relative;
+	background-color: #0f0;
+}
+
+#outer[id] {
+	display: table;
+ 	position: static;
+}
+
+/* for quirk explorer only*/
+#middle {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	text-align: center;
+	} 
+
+#middle[id] {
+	display: table-cell;
+	vertical-align: middle;
+	width: 100%;
+	position: static;
+}
+
+/* for quirk explorer only */
+#inner {
+	position: relative;
+	top: -50%;
+	width: 500px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	background-color: #00f;
+} 
